[gd_scene load_steps=6 format=3 uid="uid://bs4n66kd0hybv"]

[ext_resource type="Texture2D" uid="uid://mpuoov6u5oed" path="res://Assets/Mapa/TELA INICIAL.png" id="1_d6nob"]
[ext_resource type="Script" uid="uid://b7qihl20x7wut" path="res://Assets/Scripts/tela_inicial.gd" id="1_eybj8"]
[ext_resource type="Theme" uid="uid://cwjaoo03ur0mh" path="res://Assets/Botoes/default_btn.tres" id="2_eybj8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6nob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eybj8"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eybj8")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_d6nob")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -85.0
offset_right = -14.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_eybj8")
theme_override_font_sizes/font_size = 70
text = "Iniciar Jogo"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 92
theme_override_styles/separator = SubResource("StyleBoxEmpty_d6nob")

[node name="continue_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_eybj8")
theme_override_font_sizes/font_size = 70
text = "Continuar"
visible = false

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 84
theme_override_styles/separator = SubResource("StyleBoxEmpty_eybj8")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_eybj8")
theme_override_font_sizes/font_size = 70
text = "Sair"

[node name="mochi" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

